added the logs/lineups checkboxes to the scedule page, and made them activate/deactivate under the same conditions as the button. Beveled the edges of the containing div

--- a/gamelogsaver.css
+++ b/gamelogsaver.css
@@ -2,6 +2,7 @@
 	background-color: lightgrey;
 	display: inline-block;
 	margin-bottom: 5px;
+	border-radius: 4px;
 }
 
 #csv_download_panel > span {
